--- a/project4/.vscode/launch.json
+++ b/project4/.vscode/launch.json
@@ -4,19 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    {
-        "type": "firefox",
-        "request": "launch",
-        "reAttach": true,
-        "name": "Launch index.html",
-        "file": "${workspaceFolder}/index.html"
-    },
         {
             "type": "firefox",
             "request": "launch",
             "reAttach": true,
             "name": "Launch localhost",
-            "url": "http://localhost/project4/index.html",
+            "url": "http://localhost/project4 test/index.html",
             "webRoot": "${workspaceFolder}"
         },
        
